--- a/src/assets/scss/base/_sidebar.scss
+++ b/src/assets/scss/base/_sidebar.scss
@@ -76,7 +76,8 @@
 			.sidebar__item-icon::before { 
 				content: '';
 				position: absolute;
-				top: 50%;
+				top: calc(50% - 0.5px);
+				left: 0;
 				margin-top: -1.5px;
 				width: 95%;
 				height: 3px;
