--- a/src/assets/scss/corporative/_operations.scss
+++ b/src/assets/scss/corporative/_operations.scss
@@ -123,7 +123,6 @@
 
 .operations__documentation{
     display: flex;
-    padding: 15px;
     flex-direction: column;
     align-items: center;
     margin-bottom: 95px;
@@ -133,6 +132,11 @@
     @media screen and (max-width: 767px) {
         margin-top: 33px;
         margin-bottom: 38px;
+    }
+}
+.rko{
+    &--docs{
+        padding: 35px 45px 40px 57px;
     }
 }
 .operations__documentation-nav{
@@ -149,6 +153,11 @@
 }
 .operations__documentation-list{
     position: relative;
+    border-right: 1px solid #00205B;
+    padding-right: 20px;
+    @media screen and (max-width: 767px) {
+        border-right: none;
+    }
 }
 .operations__documentation-item{
     position:absolute;
