--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -34,7 +34,8 @@
 @import './client/coin';
 @import './client/online-bank';
 @import './client/exchanges';
-@import './private/rko';
+@import './private/calculations';
+@import './private/lifestyle';
 
 @import '../css/slick.css';
 
