fix pages accountopen credits operations

--- a/src/assets/scss/corporative/_accountopen.scss
+++ b/src/assets/scss/corporative/_accountopen.scss
@@ -19,6 +19,7 @@
 }
 .principal{
     display: flex;  
+    justify-content: space-around;
     @media  screen and (max-width: 767px) {
         flex-direction: column;
     }
