--- a/src/assets/scss/corporative/_credits.scss
+++ b/src/assets/scss/corporative/_credits.scss
@@ -405,7 +405,7 @@
 	&--full{
 		width: 100%;
 	}
-	align-content: center;
+	align-items: center;
 	padding: 41px 0 41px 30px;
 	height: 126px;
 	background: #00205B;
