--- a/src/assets/scss/corporative/_operations.scss
+++ b/src/assets/scss/corporative/_operations.scss
@@ -87,6 +87,9 @@
         margin: 25px 13px 36px 16px;        
     }
 }
+.operations__kind-item.accountopen-item{
+    width: -webkit-fill-available;
+}
 .operations__kind-title{
     margin-bottom: 25px;
     font-family: 'Helvetica';
