Add consulting page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -36,6 +36,8 @@
 @import './client/exchanges';
 @import './private/calculations';
 @import './private/lifestyle';
+@import './private/consulting';
+
 
 @import '../css/slick.css';
 
