add investments page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -37,6 +37,7 @@
 @import './private/calculations';
 @import './private/lifestyle';
 @import './private/consulting';
+@import './private/investments';
 
 
 @import '../css/slick.css';
