--- a/src/assets/scss/base/_page-content.scss
+++ b/src/assets/scss/base/_page-content.scss
@@ -179,10 +179,11 @@
 		justify-content: space-around;
 	}
 	.tabs__underline{
-		height: 100%;
+		// height: 100%;
 		border-bottom: 2px solid;
 		border-image: linear-gradient(274.25deg, #00205B 0%, #00A3E0 100%) 1;
-		z-index: -1;
+		bottom: 0;
+		// z-index: -1;
 	}
 	.tabs__tab {
 		text-align: center;
