add brokers page

--- a/src/assets/scss/base/_text-styles.scss
+++ b/src/assets/scss/base/_text-styles.scss
@@ -2,6 +2,9 @@
 	&--white{
 		color: #fff;
 	}
+	&--dark-blue{
+		color: #00205B;
+	}
 	&--blue{
 		color: #003772;
 	}
@@ -20,6 +23,7 @@
 	&--black{
 		color: #000;
 	}
+	
 	&--blue-cyan{
 		background: linear-gradient(274.25deg, #00205B -9.03%, #00A3E0 138.82%);
 		-webkit-background-clip: text;
