--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @import './base/text-styles';
 @import './base/sidebar';
 @import './base/def-slider';
+@import './base/default-card';
 @import './corporative/deposits';
 @import './corporative/credits';
 @import './corporative/operations';
