--- a/src/assets/scss/private/_consulting.scss
+++ b/src/assets/scss/private/_consulting.scss
@@ -66,6 +66,11 @@
         padding: 40px 10px 54px;
         margin-bottom: 125px;
     }
+    &--brokers{
+        padding: 0;
+        background: none;
+        margin-bottom: 95px;     
+    }
 }
 .consulting-list {
     display: flex;
@@ -95,7 +100,17 @@
                 @media screen and (max-width: 991px){
                     margin-bottom: 40px;
                 }
+        
             }
-
+             
 		}
+
+        &__item--brokers{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            &:not(:last-child){
+            margin-bottom: 20px;
+            }
+        }
 }
