--- a/src/assets/scss/base/_text-styles.scss
+++ b/src/assets/scss/base/_text-styles.scss
@@ -20,8 +20,14 @@
 	&--light-gray{
 		color: #858585;
 	}
+	&--dark-white{
+		color: #DADADA;
+	}
 	&--black{
 		color: #000;
+	}
+	&--light-black{
+		color: #373737;
 	}
 	
 	&--blue-cyan{
