--- a/src/assets/scss/corporative/_credits.scss
+++ b/src/assets/scss/corporative/_credits.scss
@@ -450,6 +450,10 @@
 		padding: 10px;
 		display: flex;
 	}
+	@media screen and (max-width: 400px) {
+		flex-direction: column;
+		align-items: center;
+	}
 }
 .rates__title {
 	margin-bottom: 10px;
