--- a/src/assets/scss/base/_footer.scss
+++ b/src/assets/scss/base/_footer.scss
@@ -113,8 +113,8 @@
     }
      @media screen and (max-width:767px){
         grid-column: 2/3;
-        grid-row: 6/7;
-        align-self: flex-end;
+        grid-row: 6/8;
+        align-self: center;
     }
 }
 #navigate{
