--- a/src/assets/scss/base/_page-content.scss
+++ b/src/assets/scss/base/_page-content.scss
@@ -53,7 +53,7 @@
 	font-family: 'Helvetica';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 10px;
+	font-size: 12px;
 	line-height: 100%;
 	color: #595959;
 	padding-left: 2px;
@@ -325,3 +325,87 @@
 		border-radius: var(--arrow-thickness);
 	}
 }
+.filtered-hidden{
+	display: none !important;
+}
+// .custom-range{
+// 	input[type="range"] {
+// 	  -webkit-appearance: none;
+// 	  margin-right: 15px;
+// 	  width: 200px;
+// 	  height: 7px;
+// 	  background: rgba(255, 255, 255, 0.6);
+// 	  border-radius: 5px;
+// 	  background-image: linear-gradient(#ff4500, #ff4500);
+// 	  background-size: 70% 100%;
+// 	  background-repeat: no-repeat;
+// 	}
+
+// 	/* Input Thumb */
+// 	input[type="range"]::-webkit-slider-thumb {
+// 	  -webkit-appearance: none;
+// 	  height: 20px;
+// 	  width: 20px;
+// 	  border-radius: 50%;
+// 	  background: #ff4500;
+// 	  cursor: ew-resize;
+// 	  box-shadow: 0 0 2px 0 #555;
+// 	  transition: background .3s ease-in-out;
+// 	}
+
+// 	input[type="range"]::-moz-range-thumb {
+// 	  -webkit-appearance: none;
+// 	  height: 20px;
+// 	  width: 20px;
+// 	  border-radius: 50%;
+// 	  background: #ff4500;
+// 	  cursor: ew-resize;
+// 	  box-shadow: 0 0 2px 0 #555;
+// 	  transition: background .3s ease-in-out;
+// 	}
+
+// 	input[type="range"]::-ms-thumb {
+// 	  -webkit-appearance: none;
+// 	  height: 20px;
+// 	  width: 20px;
+// 	  border-radius: 50%;
+// 	  background: #ff4500;
+// 	  cursor: ew-resize;
+// 	  box-shadow: 0 0 2px 0 #555;
+// 	  transition: background .3s ease-in-out;
+// 	}
+
+// 	input[type="range"]::-webkit-slider-thumb:hover {
+// 	  background: #ff0200;
+// 	}
+
+// 	input[type="range"]::-moz-range-thumb:hover {
+// 	  background: #ff0200;
+// 	}
+
+// 	input[type="range"]::-ms-thumb:hover {
+// 	  background: #ff0200;
+// 	}
+
+// 	/* Input Track */
+// 	input[type=range]::-webkit-slider-runnable-track  {
+// 	  -webkit-appearance: none;
+// 	  box-shadow: none;
+// 	  border: none;
+// 	  background: transparent;
+// 	}
+
+// 	input[type=range]::-moz-range-track {
+// 	  -webkit-appearance: none;
+// 	  box-shadow: none;
+// 	  border: none;
+// 	  background: transparent;
+// 	}
+
+// 	input[type="range"]::-ms-track {
+// 	  -webkit-appearance: none;
+// 	  box-shadow: none;
+// 	  border: none;
+// 	  background: transparent;
+// 	}
+// }
