--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -39,7 +39,7 @@
 @import './private/lifestyle';
 @import './private/consulting';
 @import './private/investments';
-
+@import './private/vip-deposits';
 
 @import '../css/slick.css';
 
