--- a/src/assets/scss/utils/margin-util-preset.scss
+++ b/src/assets/scss/utils/margin-util-preset.scss
@@ -13,7 +13,6 @@
 		margin-top: 0;
 	}
 
-
 	&--l-5{
 		margin-left: 5px;
 	}
@@ -73,6 +72,9 @@
 	}
 	&--b-45{
 		margin-bottom: 45px;
+	}
+	&--b-50{
+		margin-bottom: 50px;
 	}
 	&--b-75{
 		margin-bottom: 75px;
