--- a/src/assets/scss/base/_container.scss
+++ b/src/assets/scss/base/_container.scss
@@ -1,24 +1,24 @@
 .container {
   width: 100%;
   margin: 0 auto;
-
-  @media screen and (max-width: 576px) {
-    padding: 0 6px;
-    box-sizing: border-box;
-    width: auto;
-    margin: 0 10px;
-  }  
-  @media  screen and (max-width: 375px) { 
-    width: 100%;
-    margin: 0 auto;
-  }
-  @media screen and (min-width:576px) { 
-    width: 534px;
-  } 
-  @media  screen and (min-width: 768px) { 
-    //width: 720px;
-    width: 700px;
-  }
+  padding: 0 6px;
+  // @media screen and (max-width: 576px) {
+  //   padding: 0 6px;
+  //   box-sizing: border-box;
+  //   width: auto;
+  //   margin: 0 10px;
+  // }  
+  // @media  screen and (max-width: 375px) { 
+  //   width: 100%;
+  //   margin: 0 auto;
+  // }
+  // @media screen and (min-width:576px) { 
+  //   width: 534px;
+  // } 
+  // @media  screen and (min-width: 768px) { 
+  //   //width: 720px;
+  //   width: 700px;
+  // }
   @media screen and (min-width: 992px) { 
     width: 960px;
   }
