--- a/src/assets/scss/private/_vip-deposits.scss
+++ b/src/assets/scss/private/_vip-deposits.scss
@@ -1,6 +1,6 @@
 .deposits-card {
 	padding: 40px 55px 44px 130px;
-	margin: 0 120px;
+	margin: 0 100px;
 	background: #FFFFFF;
 	border: 1px solid #D1D1D1;
 	box-shadow: 0px 4px 4px rgba(0, 32, 91, 0.15);
@@ -9,6 +9,9 @@
 	}
     @media screen and (max-width:1200px){
         padding: 40px 20px ;
+    }
+    @media screen and (max-width:991px){
+      margin: 0;
     }
 }
 .card {
@@ -50,16 +53,27 @@
 		// .column__title
 
 		&__title {
-            font-family: 'Helvetica';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 20px;
-            line-height: 23px;
-            color: #4E4E4E;
+            // font-family: 'Helvetica';
+            // font-style: normal;
+            // font-weight: 700;
+            // font-size: 20px;
+            // line-height: 23px;
+            // color: #4E4E4E;
             padding: 10px;
             border-bottom: 1px solid #00205B;
-            height: 3.75em;
+            
+            &--medium{
+                  height:3.75em;
+            }
+            &--large{
+                  height: calc(5em + 20px);
+            }
+            @media screen and (max-width: 991px){
+                  font-size: 18px;
+                  line-height: 21px;
+            }
 		}
+
 
 		// .column__text
 
@@ -71,19 +85,27 @@
             font-size: 16px;
             line-height: 18px;
             color: #454444;
+            @media screen and (max-width: 991px){
+                  padding: 7px;
+            }
 		}
 
 		// .column__pretitle
 
 		&__pretitle {
             padding: 10px;
-            font-family: 'Helvetica';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 20px;
-            line-height: 23px;
-            color: #4E4E4E;
-            height: 1.25em;
+            // font-family: 'Helvetica';
+            // font-style: normal;
+            // font-weight: 700;
+            // font-size: 20px;
+            // line-height: 23px;
+            // color: #4E4E4E;
+            height: calc(1.25em + 20px);
+            @media screen and (max-width: 991px){
+                  white-space: nowrap;
+                  font-size: 18px;
+                  line-height: 21px;
+            }
 		}
 }
 .columns {
