--- a/src/assets/scss/corporative/_credits.scss
+++ b/src/assets/scss/corporative/_credits.scss
@@ -258,9 +258,9 @@
 	flex-direction: column;
 	padding-bottom: 50px;
 }*/
-.document-list.deposits-list{
-	margin: 0 100px 70px 100px;
-}
+// .document-list.deposits-list{
+// 	margin: 0 100px 70px 100px;
+// }
 .document-list {
 	margin-bottom: 75px;
 	&__card {
