Rewrote the mobile menu js and re-created the filters on deposits

--- a/src/assets/scss/corporative/_deposits.scss
+++ b/src/assets/scss/corporative/_deposits.scss
@@ -569,7 +569,7 @@ label {
 [type=range] {
 	position: relative;
   -webkit-appearance: none;
-  width: calc(100% - 50px);
+  width: 100%;
   vertical-align: middle;
   border: none;
   outline: none;
