--- a/src/assets/scss/utils/flex-util-preset.scss
+++ b/src/assets/scss/utils/flex-util-preset.scss
@@ -83,24 +83,83 @@
 		}
 		
 	}
+	&-od{
+		&--0{
+			order: 0;
+		}
+		&--1{
+			order: 1;
+		}
+		&--2{
+			order: 2;
+		}
+		&--3{
+			order: 3;
+		}
+		&--4{
+			order: 4;
+		}
+		&--5{
+			order: 5;
+		}
+		&--6{
+			order: 6;
+		}
+		&--7{
+			order: 7;
+		}
+		&--8{
+			order: 8;
+		}
+		&--9{
+			order: 9;
+		}
+		&--10{
+			order: 10;
+		}
+	}
 	&-el{
 		&--100{
 			flex-basis: 100%;
 		}
+		&--90{
+			flex-basis: 90%;
+		}
+		&--80{
+			flex-basis: 80%;
+		}
 		&--75{
 			flex-basis: 75%;
+		}
+		&--70{
+			flex-basis: 70%;
 		}
 		&--66{
 			flex-basis: calc(100% * 2/3);
 		}
+		&--60{
+			flex-basis: 60%;
+		}
 		&--50{
 			flex-basis: 50%;
+		}
+		&--40{
+			flex-basis: 40%;
 		}
 		&--33{
 			flex-basis: calc(100% * 1/3);
 		}
+		&--30{
+			flex-basis: 30%;
+		}
 		&--25{
 			flex-basis: 25%;
+		}
+		&--20{
+			flex-basis: 20%;
+		}
+		&--10{
+			flex-basis: 10%;
 		}
 		&--s0{
 			flex-shrink: 0;
