add fix vip-deposits

--- a/src/assets/scss/base/_page-content.scss
+++ b/src/assets/scss/base/_page-content.scss
@@ -78,6 +78,11 @@
 	background: linear-gradient(224.4deg, #7B1931 -23.64%, #E05226 113.52%);
 	border:none;
 	border-radius: 2px;
+	&--fullwidth{
+		@media screen and (max-width: 767px){
+			width: 100%;
+		}
+	}
 	&--transparent{
 		color: #7A7A7A;
 		background: transparent;
