--- a/src/assets/scss/private/_vip-deposits.scss
+++ b/src/assets/scss/private/_vip-deposits.scss
@@ -1,3 +1,8 @@
+.deposits{
+      &__title{
+
+      }
+}
 .deposits-card {
 	padding: 40px 55px 44px 130px;
 	margin: 0 100px;
@@ -39,8 +44,13 @@
                   display: flex;
                   flex-direction: row;
                   margin-bottom: 50px;
-                  @media screen and (max-width:767px){
+                  @media screen and (max-width:768px){
                         flex-direction: column;
+                  }
+                  &--original{
+                        display: flex;
+                        flex-direction: row;
+                        margin-bottom: 50px;
                   }
 		}
 
@@ -56,36 +66,51 @@
 
 		&__title {
                   display: flex;
-                  // font-family: 'Helvetica';
-                  // font-style: normal;
-                  // font-weight: 700;
-                  // font-size: 20px;
-                  // line-height: 23px;
-                  // color: #4E4E4E;
                   padding: 10px;
                   border-bottom: 1px solid #00205B;
-                  
+                  &--min-size{
+                        width: min-content;
+                        @media screen and (max-width:768px){
+                              width: 100%;
+                        }
+                  }
                   &--medium{
                         height:3.75em;
                   }
                   &--large{
                         height: calc(5em + 20px);
+                     
                   }
                   @media screen and (max-width: 991px){
                         font-size: 18px;
                         line-height: 21px;
                   }
-                  @media screen and (max-width:767px){
+                  @media screen and (max-width:768px){
                         border: none;
                         height: calc(1.25em + 20px);
                   }
+                  &--original{
+                        display: flex;
+                        padding: 10px;
+                        border-bottom: 1px solid #00205B; 
+                  }
 		}
 
-
+            &__text-wrapper{
+                  display: flex;
+                  flex-direction: column;
+                  @media screen and (max-width:768px){
+                        flex-direction: row;
+                        align-items: flex-start;
+                  }
+                  &--original{
+                        display: flex;
+                        flex-direction: column;
+                  }
+            }
 		// .column__text
 
 		&__text {
-                 
                   padding: 10px;
                   font-family: 'Helvetica';
                   font-style: normal;
@@ -96,11 +121,12 @@
                   @media screen and (max-width: 991px){
                         padding: 7px;
                   }
-                  @media screen and (max-width:767px){
+                  @media screen and (max-width:768px){
                         flex: 0 0 50%;
+                        align-items: flex-start;
                   }
-                  &--align{
-                        align-self: center;
+                  &--flex30{
+                        flex: 0 0 33%;
                   }
 		}
 
@@ -108,15 +134,8 @@
 
 		&__pretitle {
                   padding: 10px;
-                  // font-family: 'Helvetica';
-                  // font-style: normal;
-                  // font-weight: 700;
-                  // font-size: 20px;
-                  // line-height: 23px;
-                  // color: #4E4E4E;
                   height: calc(1.25em + 20px);
                   @media screen and (max-width: 991px){
-                        white-space: nowrap;
                         font-size: 18px;
                         line-height: 21px;
                   }
@@ -130,9 +149,14 @@
                   display: flex;
                   flex-direction: row;
                   text-align: center;
-                  @media screen and (max-width: 767px){
+                  @media screen and (max-width: 768px){
                         flex-direction: column;
-                        
+                        text-align:left;
+                  }
+                  &--original{
+                        display: flex;
+                        flex-direction: row;
+                        text-align: center;  
                   }
 		}
             
@@ -145,55 +169,3 @@
 .btn {
 }
 
-
-
-
-
-
-
-
-// .deposits-card {
-// 	padding: 40px 55px 44px 130px;
-// 	margin: 0 120px;
-// 	background: #FFFFFF;
-// 	border: 1px solid #D1D1D1;
-// 	box-shadow: 0px 4px 4px rgba(0, 32, 91, 0.15);
-// 	&:not(:last-child){
-// 		margin-bottom: 50px;
-// 	}
-// 		// .deposits-card__wrapper
-
-// 		&__wrapper {
-// 		}
-
-// 		// .deposits-card__title
-
-// 		&__title {
-// 			margin-bottom: 30px;
-// 			font-family: 'Helvetica';
-// 			font-style: normal;
-// 			font-weight: 700;
-// 			font-size: 24px;
-// 			line-height: 28px;
-// 			color: #00205B;
-// 		}
-// }
-// .tg {
-// 	font-family: 'Helvetica';
-// 	font-style: normal;
-// 	color: #4E4E4E;
-// 	table-layout: fixed;
-// 	width: 100%;
-// 	border-collapse: collapse;
-// 	margin-bottom: 60px;
-// }
-// .tg-lue3 {
-// 	padding: 10px;
-// 	text-align: center;
-// 	margin-bottom: 50px;
-// }
-// .thead{
-//     width: 100%;
-//     border-bottom: 1px solid #00205B;
-// 	padding-bottom: 29px;
-// }
