--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -46,30 +46,30 @@
 
 
 input{
-    caret-color: black;
+	caret-color: black;
 }
 body {
-    margin: 0px;
-    font-family: $mainFont;
-    color: #003772;
-    background-color: #F7FAFF;
+	margin: 0px;
+	font-family: $mainFont;
+	color: #003772;
+	background-color: #F7FAFF;
 }
 
 button:hover,
 button:focus {
-    cursor: pointer;
+	cursor: pointer;
 }
 button:active{
-    background: #B94C40;
+	background: #B94C40;
 }
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 a {
@@ -92,26 +92,89 @@ h4,
 h5,
 h6,
 p {
-    margin-top: 0;
-    margin-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 h1 { //default style for main page title
-    font-style: normal;
-    font-weight: 600;
-    font-size: rem(24);
-    line-height: rem(28);
-    text-transform: uppercase;
+	font-style: normal;
+	font-weight: 600;
+	font-size: rem(24);
+	line-height: rem(28);
+	text-transform: uppercase;
 }
 .ibg{
-    background-position: center;
-    background-repeat: no-repeat;
-    &--contain{
-        background-size: contain;
-    }
-    &--cover{
-        background-size: cover;
-    }
+	background-position: center;
+	background-repeat: no-repeat;
+	&--contain{
+		background-size: contain;
+	}
+	&--cover{
+		background-size: cover;
+	}
 }
 div.hidden{
-    display: none;
+	display: none;
+}
+
+.vip-filters{
+	&__wrapper{
+		display: grid;
+		grid-template-columns: 1fr 2fr;
+		grid-template-rows: auto auto; 
+		align-items: center;
+		@media screen and (max-width: 768px) {
+			grid-template-columns: 1fr 1fr;
+			grid-template-rows: auto auto; 
+		}
+		@media screen and (max-width: 576px) {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+	&__range{
+		grid-row: 2/3;
+		grid-column: 1/2;
+		@media screen and (max-width: 768px) {
+			grid-row: 1/2;
+			grid-column: 2/3;
+		}
+		@media screen and (max-width: 576px) {
+			order: 0;
+			width: 100%;
+			max-width: 360px;
+		}
+	}
+	&__checkboxes{
+		grid-row: 1/2;
+		grid-column: 1/3;
+		@media screen and (max-width: 768px) {
+			grid-row: 1/3;
+			grid-column: 1/2;
+		}
+		@media screen and (max-width: 576px) {
+			order: 1;
+		}
+	}
+	&__button{
+		grid-row: 2/3;
+		grid-column: 2/3;
+		justify-self: start;
+		margin-left: 45px;
+		@media screen and (max-width: 768px) {
+			grid-row: 2/3;
+			grid-column: 2/3;
+			margin-left: 0;
+			justify-self: center;
+		}
+		@media screen and (max-width: 576px) {
+			order: 2;
+			width: 100%;
+			&>button{
+				width: 100%;
+				max-width: 360px;
+				margin: auto;
+			}
+		}
+	}
+	
 }
