--- a/src/assets/scss/private/_vip-deposits.scss
+++ b/src/assets/scss/private/_vip-deposits.scss
@@ -57,7 +57,13 @@
 		// .card__table-column
 
 		&__table-column {
-            
+                  &--original{
+                        flex: 0 0 40%;
+                  }
+                  @media screen and (max-width:768px){
+                        flex: 0 0 50%;
+                  }
+                  
 		}
 }
 .column {
@@ -68,19 +74,7 @@
                   display: flex;
                   padding: 10px;
                   border-bottom: 1px solid #00205B;
-                  &--min-size{
-                        width: min-content;
-                        @media screen and (max-width:768px){
-                              width: 100%;
-                        }
-                  }
-                  &--medium{
-                        height:3.75em;
-                  }
-                  &--large{
-                        height: calc(5em + 20px);
-                     
-                  }
+                  
                   @media screen and (max-width: 991px){
                         font-size: 18px;
                         line-height: 21px;
@@ -89,10 +83,30 @@
                         border: none;
                         height: calc(1.25em + 20px);
                   }
+                  &--min-size{
+                        width: min-content;
+                        @media screen and (max-width:768px){
+                              width: 100%;
+                        }
+                  }
+                  &--medium{
+                        height:3.75em;
+                        
+                  }
+                  &--large{
+                        height: calc(5em + 20px);
+                     
+                  }
                   &--original{
                         display: flex;
                         padding: 10px;
                         border-bottom: 1px solid #00205B; 
+                  }
+                  &--special{
+                        @media screen and (max-width:768px){
+                        border: none;
+                        height: calc(1.25em + 20px);
+                  }
                   }
 		}
 
@@ -127,6 +141,11 @@
                   }
                   &--flex30{
                         flex: 0 0 33%;
+                  }
+                  &--original{
+                        @media screen and (max-width:575px){
+                              height: calc(2em + 10px);
+                        }
                   }
 		}
 
@@ -169,7 +188,12 @@
 .btn {
 }
 
-
+.filter-card{
+     margin: 0 100px; 
+     @media screen and (max-width:991px){
+      margin: 0;
+    }
+}
 .vip-filters{
 	&__wrapper{
 		display: grid;
