--- a/src/assets/scss/base/_header.scss
+++ b/src/assets/scss/base/_header.scss
@@ -139,7 +139,7 @@
 .header-menu {
 	padding-top: 25px;
 	padding-bottom: 25px;
-	margin-bottom: 10px;
+	// margin-bottom: 10px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
