--- a/src/assets/scss/private/_vip-deposits.scss
+++ b/src/assets/scss/private/_vip-deposits.scss
@@ -3,20 +3,25 @@
 
       }
 }
-.deposits-card {
+.deposits-card { 
+	&--center{
+		*{
+			text-align: center;
+			justify-content: center;
+		}
+		
+	}
 	padding: 40px 55px 44px 130px;
-	margin: 0 100px;
+	margin: 0 100px 50px 100px;
 	background: #FFFFFF;
 	border: 1px solid #D1D1D1;
 	box-shadow: 0px 4px 4px rgba(0, 32, 91, 0.15);
-	&:not(:last-child){
-		margin-bottom: 50px;
-	}
+	margin-bottom: 50px;
     @media screen and (max-width:1200px){
       padding: 40px 20px ;
     }
     @media screen and (max-width:991px){
-      margin: 0;
+      margin: 0 0 50px 0;
     }
 }
 .card {
@@ -87,6 +92,7 @@
                         width: min-content;
                         @media screen and (max-width:768px){
                               width: 100%;
+                              margin-bottom: 15px;
                         }
                   }
                   &--medium{
@@ -116,6 +122,7 @@
                   @media screen and (max-width:768px){
                         flex-direction: row;
                         align-items: flex-start;
+                        padding: 0 30px;
                   }
                   &--original{
                         display: flex;
@@ -157,6 +164,9 @@
                   @media screen and (max-width: 991px){
                         font-size: 18px;
                         line-height: 21px;
+                  }
+                  @media screen and (max-width:768px){
+                        margin-bottom: 15px;
                   }
 		}
 }
