--- a/src/assets/scss/private/_vip-deposits.scss
+++ b/src/assets/scss/private/_vip-deposits.scss
@@ -154,6 +154,9 @@
                               height: calc(2em + 10px);
                         }
                   }
+                  &--bold{
+                  	font-weight: bold;
+                  }
 		}
 
 		// .column__pretitle
