--- a/src/assets/scss/base/_default-card.scss
+++ b/src/assets/scss/base/_default-card.scss
@@ -1,13 +1,13 @@
 .default-card{
     width: 100%;
-    padding: 36px 50px 40px 55px;
+    padding: 40px 50px;
     background: #FFFFFF;
     border: 1px solid #D1D1D1;
     box-shadow: 0px 4px 4px rgb(0 32 91 / 15%);
     @media screen and (max-width:991px){
-        padding: 36px 24px 40px 55px;
+        padding: 40px 30px;
     }
     @media screen and (max-width:575px){
-        padding: 36px 10px 40px;
+        padding: 40px 10px;
     }
 }
