--- a/src/assets/scss/corporative/_distance-services.scss
+++ b/src/assets/scss/corporative/_distance-services.scss
@@ -181,7 +181,7 @@
 }
 .mobile-background,
 .desktop-background {
-	margin-left:95px;
+	// margin-left:95px;
 	@media screen and (max-width: 1199px){
 		margin-left: 0px;
 	}
@@ -210,7 +210,7 @@
 }
 
 .desktop-ad-card {
-	margin-left: 95px;
+	// margin-left: 95px;
 	@media screen and (max-width: 1200px){
 		margin-left: 0;
 	}
