--- a/src/assets/scss/corporative/_operations.scss
+++ b/src/assets/scss/corporative/_operations.scss
@@ -209,7 +209,7 @@
 	display: flex;
 	border-bottom: 1px solid #B8B8B8;
 	margin-bottom: 45px;
-	justify-content: space-between;
+	justify-content: space-around;
 	@media screen and (max-width:767px) {
 		display: flex;
 		flex-wrap: wrap;
