--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -44,7 +44,7 @@
             align-items: flex-start;
             background: #FFFFFF;
             border: 1px solid #D1D1D1;
-            padding: 30px;
+            padding: 30px 25px;
             &:not(:last-child){
                 margin-right: 30px;
             }
@@ -53,11 +53,12 @@
 		// .info-card__title
 
 		&__title {
+            margin-bottom: 12px;
             font-family: 'Helvetica';
             font-style: normal;
             font-weight: 400;
             font-size: 24px;
-            line-height: 28px;
+            line-height: 1.25em;
             background: linear-gradient(224.4deg, #7B1931 -23.64%, #E05226 113.52%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
