--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -13,15 +13,28 @@
     align-items: flex-start;
     padding: 155px 0 220px 0;
 }
-.general-title {
-    margin-bottom: 50px;
-    font-family: 'Helvetica';
-    font-style: normal;
-    font-weight: 200;
-    font-size: 48px;
-    line-height: 1.25em;
-    color: #FFFFFF;
+.general-title__wrap{
+      display: flex;
 }
+.general-title {
+      flex: 0 0 65%;
+      margin-bottom: 50px;
+      font-family: 'Helvetica';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 48px;
+      line-height: 1.25em;
+      color: #FFFFFF;
+      @media screen and (max-width: 992px){
+            flex: 0 0 100%;
+            font-size: 36px;
+      }
+      @media screen and (max-width: 575px){
+            font-size: 24px;
+      }
+            
+}
+
 .general-btn {
 }
 .btn {
@@ -30,24 +43,44 @@
 }
 .general-info {
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
-    margin: 84px 0  140px;
+    flex-wrap: wrap;
+    margin: 84px 0  100px;
+    row-gap: 20px;
+    @media screen and (max-width:992px){
+      margin: 40px 0 100px;
+    }
+    @media screen and (max-width: 575px){
+      margin: 30px 0 85px;
+      row-gap: auto;
+    }
 }
 .info-card {
 
 		// .info-card__wrapper
 
 		&__wrapper {
-            display: flex;
+            flex: 0 0 24%;
             flex-direction: column;
-            justify-content: space-between;
             align-items: flex-start;
             background: #FFFFFF;
             border: 1px solid #D1D1D1;
-            padding: 30px 25px;
-            &:not(:last-child){
-                margin-right: 30px;
+            padding: 30px;
+      
+            @media screen and (max-width:1200px){
+                  flex: 0 0 45%;
+                  
+                }
+            @media screen and (max-width: 768px) {
+                  padding: 15px;
             }
+            @media  screen and (max-width: 575px) {
+                  flex: 0 0 48%;
+                  padding: 15px 10px;
+
+            }
+            
 		}
 
 		// .info-card__title
@@ -57,13 +90,16 @@
             font-family: 'Helvetica';
             font-style: normal;
             font-weight: 400;
-            font-size: 24px;
+            font-size: 20px;
             line-height: 1.25em;
             background: linear-gradient(224.4deg, #7B1931 -23.64%, #E05226 113.52%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             text-fill-color: transparent;
+            @media screen and (max-width:575px){
+                  font-size: 16px;     
+            }
 		}
 
 		// .info-card__text
@@ -75,6 +111,9 @@
             font-size: 18px;
             line-height: 21px;
             color: #5B5B5B;
+            @media screen and (max-width:575px){
+             font-size: 14px;     
+            }
 		}
 }
 .general-about {
