--- a/src/assets/scss/private/_lifestyle.scss
+++ b/src/assets/scss/private/_lifestyle.scss
@@ -11,13 +11,14 @@
 	margin-bottom: 35px;
 }
 .lifestyle-about {
-	padding: 28px 150px 47px 36px;
+	padding: 30px 35px;
+	// padding: 28px 150px 47px 36px;
     background: #001843;
     box-shadow: 0px 4px 4px rgba(86, 31, 0, 0.1);
     border-radius: 2px;
-	margin:0 -32px 85px;
-	@media screen and (max-width: 575px){
-		padding: 50px 15px 65px;
+	// margin:0 -32px 85px;
+	@media screen and (max-width: 768px){
+		padding: 50px 15px;
 	}
 
 		// .lifestyle-about__text
@@ -83,19 +84,20 @@
 		}
 }
 .insurance-wrap {
+	margin-bottom: 100px;
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row;
-	padding: 60px 34px 82px 38px;
+	padding: 60px 40px;
 	background: #001843;
 	box-shadow: 0px 4px 4px rgba(86, 31, 0, 0.1);
 	border-radius: 2px;
-	margin:0 -32px 145px;
+	// margin:0 -32px 145px;
 	@media screen and (max-width: 991px){
 		flex-direction: column;
 	}
-	@media screen and (max-width:575px){
-		padding: 35px 4px 60px;
+	@media screen and (max-width:768px){
+		padding: 60px 15px;
 	}
 }
 .insurance-about {
