--- a/src/assets/scss/corporative/_operations.scss
+++ b/src/assets/scss/corporative/_operations.scss
@@ -160,7 +160,13 @@
 }
 .operations__documentation-list{
 	position: relative;
-	border-right: 1px solid #00205B;
+	border-right: 1px solid;
+	border-image: 
+    linear-gradient(
+      to bottom, 
+      #00A3E0, 
+      #00205B
+    ) 1 100%;
 	padding-right: 20px;
 	@media screen and (max-width: 767px) {
 		border-right: none;
