--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -37,7 +37,10 @@
 
 .general-btn {
 }
-.btn {
+.btn--width{
+      @media screen and (max-width:440px){
+            width: -webkit-fill-available;
+      }
 }
 .general {
 }
@@ -61,12 +64,12 @@
 		// .info-card__wrapper
 
 		&__wrapper {
-            flex: 0 0 24%;
-            flex-direction: column;
-            align-items: flex-start;
-            background: #FFFFFF;
-            border: 1px solid #D1D1D1;
-            padding: 30px;
+                  flex: 0 0 24%;
+                  flex-direction: column;
+                  align-items: flex-start;
+                  background: #FFFFFF;
+                  border: 1px solid #D1D1D1;
+                  padding: 30px;
       
             @media screen and (max-width:1200px){
                   flex: 0 0 45%;
@@ -86,87 +89,144 @@
 		// .info-card__title
 
 		&__title {
-            margin-bottom: 12px;
-            font-family: 'Helvetica';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 1.25em;
-            background: linear-gradient(224.4deg, #7B1931 -23.64%, #E05226 113.52%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-fill-color: transparent;
-            @media screen and (max-width:575px){
-                  font-size: 16px;     
-            }
+                  margin-bottom: 12px;
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 20px;
+                  line-height: 1.25em;
+                  background: linear-gradient(224.4deg, #7B1931 -23.64%, #E05226 113.52%);
+                  -webkit-background-clip: text;
+                  -webkit-text-fill-color: transparent;
+                  background-clip: text;
+                  text-fill-color: transparent;
+                  @media screen and (max-width:575px){
+                        font-size: 16px;     
+                  }
 		}
 
 		// .info-card__text
 
 		&__text {
-            font-family: 'Helvetica';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 21px;
-            color: #5B5B5B;
-            @media screen and (max-width:575px){
-             font-size: 14px;     
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 18px;
+                  line-height: 21px;
+                  color: #5B5B5B;
+                  @media screen and (max-width:575px){
+                  font-size: 14px;     
             }
 		}
 }
 .general-about {
     display: flex;
     flex-direction: row;
-
+    justify-content: space-between; 
+    margin-bottom: 140px;
+    @media screen and (max-width:992px){
+      flex-direction: column;
+    }
 }
 .about-card {
 
 		// .about-card__wrapper
 
 		&__wrapper {
-            flex-direction: column;
-            align-items: flex-start;
-            flex: 0 0 50%;
-            padding: 30px 45px 45px 70px;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 5px;
-            &:not(:last-child){
-                margin-right: 30px;
-            }
+                  flex-direction: column;
+                  align-items: flex-start;
+                  flex: 0 0 48%;
+                  padding: 40px 60px;
+                  background: rgba(255, 255, 255, 0.8);
+                  border-radius: 5px;
+                  @media screen and (max-width: 1200px){
+                        padding: 40px 30px;
+                  }
+                  @media screen and (max-width:992px){
+                        padding: 40px 60px;
+                        margin-bottom: 70px;
+                  }
+                  @media screen and (max-width:575px){
+                        padding: 40px 30px;
+                        
+                  }
 		}
 
 		// .about-card__title
 
 		&__title {
-            font-family: 'Helvetica';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 30px;
-            line-height: 34px;
-            color: #00205B;
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 700;
+                  font-size: 30px;
+                  line-height: 34px;
+                  color: #00205B;
+                  @media screen and (max-width: 575px){
+                        font-size: 24px;
+                        line-height: 28px;   
+                  }
 		}
 
 		// .about-card__posttitle
-
+            &__title-wrap{
+                  margin-bottom: 42px;
+            }
 		&__posttitle {
-            font-family: 'Helvetica';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 20px;
-            line-height: 23px;
-            color: #4E4E4E;
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 700;
+                  font-size: 20px;
+                  line-height: 23px;
+                  color: #4E4E4E;
+                  @media screen and (max-width: 575px){
+                        font-size: 16px;
+                        line-height: 18px;      
+                  }
 		}
 
 		// .about-card__text
 
 		&__text {
-            font-family: 'Helvetica';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 18px;
-            color: #4E4E4E;
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 16px;
+                  line-height: 18px;
+                  color: #4E4E4E;
+                  @media screen and (max-width: 575px){
+                        font-size: 14px;
+                        line-height: 16px;
+                  }
 		}
+            &__text-wrapper{
+                  display: flex;
+                  margin-right: -60px;
+                  justify-content: space-between;
+                  @media screen and (max-width: 575px){
+                        margin-right: -30px;
+                  }
+            }
+            &__text-wrap{
+                  flex: 0 0 50%;
+                  @media screen and (max-width: 1200px){
+                        flex: 0 0 45%
+                  }
+            }
+            &__img-wrap{
+                  position: relative;
+                  flex: 0 0 50%;
+                  overflow: hidden;
+                  @media screen and (max-width: 1200px){
+                        flex: 0 0 47%;
+                  }
+            }
+            &__img{
+                  position: absolute;
+                  top: 0;
+                  height: 100%;
+                  left: 5%;
+                  @media screen and (max-width:575px) {
+                     margin-right: -30px;   
+                  }
+            }
 }
